Implemented save new, update, delete and patch for CustomerServiceJPA